Prevented links/attachments from overflowing description. See JILS-29

--- a/static/core.css
+++ b/static/core.css
@@ -49,7 +49,7 @@ table.issueInfo {width: 100%; border: 0px;}
 .worklogindex {font-style: italic;}
 .timespent {font-weight: bold;}
 
-#worklogblock, #subtasksblock, #linksblock, #attachmentsblock { border: 1px solid #000; padding: 10px; margin-top: 40px}
+#worklogblock, #subtasksblock, #linksblock, #attachmentsblock { border: 1px solid #000; padding: 10px; margin-top: 10px;}
 #commentsblock {padding: 10px; margin-top: 40px}
 #attachmentsblock table {width: 40%}
 #attachmentsblock img {margin: 5px;}
